# cachedir

./: .travis.yml  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  appveyor.yml
src/: lib.rs  traits_impls.rs
src/sys_cache/: mod.rs  redox_cache.rs  unix_cache.rs  unknown_os_cache.rs  windows_cache.rs
tests/: tests.rs
